--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+
+    implementation 'io.github.muddz:styleabletoast:2.4.0'
 }
