--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 30 12:18:27 BDT 2021
-sdk.dir=C\:\\Users\\Humay\\AppData\\Local\\Android\\Sdk
+#Fri Dec 10 22:45:51 CST 2021
+sdk.dir=C\:\\Users\\shini\\AppData\\Local\\Android\\Sdk
