--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Dec 10 22:45:51 CST 2021
-sdk.dir=C\:\\Users\\shini\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Humay\\AppData\\Local\\Android\\Sdk
